--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -62,8 +62,7 @@
         
                             <h2>Leave a Review: </h2>
                             <fieldset class="starability-basic">
-                                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
-                                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                <input type="radio" id="first-rate1" name="review[rating]" value="1" checked/>
                                 <label for="first-rate1" title="Terrible">1 star</label>
                                 <input type="radio" id="first-rate2" name="review[rating]" value="2" />
                                 <label for="first-rate2" title="Not good">2 stars</label>
@@ -98,7 +97,7 @@
                                     <p class="starability-result" data-rating="<%= review.rating %>">
                                         Rated: <%= review.rating %> stars
                                       </p>
-                                    <p class="card-text">Review: <%= review.body %></p>
+                                    <p class="card-text"><%= review.body %></p>
                                     <% if (currentUser && review.author.equals(currentUser._id)){ %>
                                         <form
                                             action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
