--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -83,7 +83,12 @@
                         </div>
                         <button class="btn btn-success mb-2">Submit</button>
                     </form>
-                    <% } %>
+                    <% } else{ %>
+                        <div class="mb-2">
+                            <span class="text-muted">Login to leave a review</span>
+                            <a href="/login" class="btn btn-outline-dark btn-sm">Login</a>
+                        </div>
+                    <% } %> 
                         <% for(let review of campground.reviews) { %>
                             <div class="card mb-3 ">
                                 <div class="card-body">
